[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/RoleSelection.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/safari_background.png" id="safari_background"]

[node name="RoleSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("safari_background")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.909804, 0.835294, 1)
theme_override_font_sizes/font_size = 48
text = "Select Your Roles"
horizontal_alignment = 1

[node name="PlayerSlots" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Player1" type="Panel" parent="VBoxContainer/PlayerSlots"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/PlayerSlots/Player1"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
text = "Player 1"
horizontal_alignment = 1

[node name="RoleDisplay" type="Label" parent="VBoxContainer/PlayerSlots/Player1"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.5, 0, 1)
text = "Select Role..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="SelectButton" type="Button" parent="VBoxContainer/PlayerSlots/Player1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true

[node name="Player2" type="Panel" parent="VBoxContainer/PlayerSlots"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/PlayerSlots/Player2"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
text = "Player 2"
horizontal_alignment = 1

[node name="RoleDisplay" type="Label" parent="VBoxContainer/PlayerSlots/Player2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.5, 0, 1)
text = "..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="SelectButton" type="Button" parent="VBoxContainer/PlayerSlots/Player2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true

[node name="Player3" type="Panel" parent="VBoxContainer/PlayerSlots"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/PlayerSlots/Player3"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
text = "Player 3"
horizontal_alignment = 1

[node name="RoleDisplay" type="Label" parent="VBoxContainer/PlayerSlots/Player3"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.5, 0, 1)
text = "..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="SelectButton" type="Button" parent="VBoxContainer/PlayerSlots/Player3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true

[node name="Player4" type="Panel" parent="VBoxContainer/PlayerSlots"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/PlayerSlots/Player4"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
text = "Player 4"
horizontal_alignment = 1

[node name="RoleDisplay" type="Label" parent="VBoxContainer/PlayerSlots/Player4"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.5, 0, 1)
text = "..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="SelectButton" type="Button" parent="VBoxContainer/PlayerSlots/Player4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true

[node name="RoleGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Start Game"
